--------------------------------------------------------------------------------
Fusion 1.210 - February 28th, 2004
--------------------------------------------------------------------------------

- 02-25-04: Restructuring SQL Format; Part 1/3 - The Database. [AlexKreuz]
- 02-24-04: Updated formula and error message for Pharmacy.  [Colus]
- 02-23-04: Fixed Numerous Guild Crashes.  [Darkhelmet]
- 02-22-04: Updated Pets need an accessory to use skills. [Darkhelmet]
- 02-22-04: Updated Pet Skills. [Darkhelmet]
- 02-22-04: Updated pet movement speed. [Colus]
- 02-21-04: Fixed bug #528, players trying to log on with case sensitive ID. [Darkhelmet]
- 02-21-04: Updated Pet Login, pet now shows after server restart. [Darkhelmet]
- 02-21-04: Updated Pet Looting, pet just moves a little fast. [Darkhelmet]
- 02-18-04: Added new party packet w/item/loot share (not implemented yet!) [Colus]
- 02-18-04: Fixed most/all conditions for basic skills [Colus]
- 02-18-04: Added error messages for basic skills [Colus]
- 02-18-04: Re-fixed bug #394 to give proper error message for /organize [Colus]
- 02-18-04: Updated SendSkillError [Colus]
- 02-16-04: Looted items now go to players inventory. [Darkhelmet]
- 02-16-04: Added Pet looting system, items cannot be recovered though. [Darkhelmet]
- 02-16-04: Added Chance to Blind for Holy cross to undead [Oatmeal]
- 02-14-04: Added Graphic support for Land protector: no effect though [Oatmeal]
- 02-14-04: Fixed Beat bane not giving bonus damage [Oatmeal]
- 02-14-04: Fixed Triple blow delay  [Oatmeal]
- 02-14-04: Fixed Guild Skill bug (#382) [beita]
- 02-14-04: Added Combo delay for combos, needs delay time for Triple blow [Oatmeal]
- 02-14-04: Fixed bug #498, forging list error with mini-furnaces [Colus]
- 02-12-04: Buffs are now removed on job change. [Darkhelmet]
- 02-12-04: Merged Colus's Cloaking Fix, my bad before. [Darkhelmet]
- 02-12-04: Fixed Passive weapon skills, now display amount of ATK increased. [Darkhelmet]