@@ -2,6 +2,8 @@
 Fusion 1.210 - February 28th, 2004
 --------------------------------------------------------------------------------
 
+- 02-25-04: Fixed "Unknown Skill" bug on GC while in Guild. [Darkhelmet]
+- 02-25-04: Added Smokie's Perfect Hide (Cannot be detected by demons or insects). [Darkhelmet]
 - 02-25-04: Restructuring SQL Format; Part 1/3 - The Database. [AlexKreuz]
 - 02-24-04: Updated formula and error message for Pharmacy.  [Colus]
 - 02-23-04: Fixed Numerous Guild Crashes.  [Darkhelmet]
